# docx_to_pptx

./: .gitignore  README.md  build.bat  build.ps1  convert.py  docx_to_pptx.spec  gui.py  main.py  pyproject.toml  requirements.txt  setup.iss
.github/workflows/: build-installer.yml
scripts/: build.bat  build.ps1
src/: __init__.py  convert.py  gui.py  handlers.py  main.py
tests/: Test2.pptx  test.docx  test.pptx  test_conversion.py
