[project]
name = "docx-to-pptx"
version = "1.0.0"
description = "Convertisseur de documents Word en présentations PowerPoint"
authors = [
    {name = "iamSamDiak"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml>=4.9.0,<6.0.0",
    "pillow>=10.0.0",
    "PyQt5>=5.15.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.0",
    "typing-extensions>=4.0.0",
    "xlsxwriter>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["convert", "gui", "main"]
py-modules = ["convert", "gui", "main"]
